--- a/app/src/main/res/layout/activity_labo_ajouter.xml
+++ b/app/src/main/res/layout/activity_labo_ajouter.xml
@@ -13,7 +13,8 @@
         android:layout_height="wrap_content"
         android:text="Revenir a la liste des patients"
         tools:layout_editor_absoluteX="49dp"
-        tools:layout_editor_absoluteY="604dp" />
+        tools:layout_editor_absoluteY="604dp"
+        tools:ignore="MissingConstraints"/>
 
     <EditText
         android:id="@+id/textView20"
@@ -23,7 +24,8 @@
         android:textColor="@color/black"
         android:textSize="23dp"
         tools:layout_editor_absoluteX="207dp"
-        tools:layout_editor_absoluteY="343dp" />
+        tools:layout_editor_absoluteY="343dp"
+        tools:ignore="MissingConstraints"/>
 
     <EditText
         android:id="@+id/textView21"
@@ -33,7 +35,8 @@
         android:textColor="@color/black"
         android:textSize="23dp"
         tools:layout_editor_absoluteX="207dp"
-        tools:layout_editor_absoluteY="425dp" />
+        tools:layout_editor_absoluteY="425dp"
+        tools:ignore="MissingConstraints"/>
 
     <EditText
         android:id="@+id/textView19"
@@ -43,7 +46,8 @@
         android:textColor="@color/black"
         android:textSize="23dp"
         tools:layout_editor_absoluteX="207dp"
-        tools:layout_editor_absoluteY="276dp" />
+        tools:layout_editor_absoluteY="276dp"
+        tools:ignore="MissingConstraints"/>
 
     <EditText
         android:id="@+id/textView18"
@@ -53,7 +57,8 @@
         android:textColor="@color/black"
         android:textSize="23dp"
         tools:layout_editor_absoluteX="207dp"
-        tools:layout_editor_absoluteY="214dp" />
+        tools:layout_editor_absoluteY="214dp"
+        tools:ignore="MissingConstraints"/>
 
     <TextView
         android:id="@+id/textView17"
@@ -63,7 +68,8 @@
         android:textColor="@color/black"
         android:textSize="20dp"
         tools:layout_editor_absoluteX="38dp"
-        tools:layout_editor_absoluteY="401dp" />
+        tools:layout_editor_absoluteY="401dp"
+        tools:ignore="MissingConstraints"/>
 
     <TextView
         android:id="@+id/textView16"
@@ -73,7 +79,8 @@
         android:textColor="@color/black"
         android:textSize="23dp"
         tools:layout_editor_absoluteX="38dp"
-        tools:layout_editor_absoluteY="343dp" />
+        tools:layout_editor_absoluteY="343dp"
+        tools:ignore="MissingConstraints"/>
 
     <TextView
         android:id="@+id/textView"
@@ -84,7 +91,8 @@
         android:textFontWeight="@android:integer/config_longAnimTime"
         android:textSize="30dp"
         tools:layout_editor_absoluteX="101dp"
-        tools:layout_editor_absoluteY="13dp" />
+        tools:layout_editor_absoluteY="13dp"
+        tools:ignore="MissingConstraints"/>
 
     <Button
         android:id="@+id/button"
@@ -92,15 +100,17 @@
         android:layout_height="wrap_content"
         android:text="Ajouter"
         tools:layout_editor_absoluteX="138dp"
-        tools:layout_editor_absoluteY="535dp" />
+        tools:layout_editor_absoluteY="535dp"
+        tools:ignore="MissingConstraints"/>
 
     <ImageView
         android:id="@+id/imageView2"
         android:layout_width="109dp"
         android:layout_height="81dp"
-        app:srcCompat="@drawable/LogoApplication"
+        app:srcCompat="@drawable/darkbackground"
         tools:layout_editor_absoluteX="271dp"
-        tools:layout_editor_absoluteY="-2dp" />
+        tools:layout_editor_absoluteY="-2dp"
+        tools:ignore="MissingConstraints"/>
 
     <ImageView
         android:id="@+id/imageView3"
@@ -108,7 +118,8 @@
         android:layout_height="74dp"
         app:srcCompat="@drawable/ministeredelsantetunisie"
         tools:layout_editor_absoluteX="-2dp"
-        tools:layout_editor_absoluteY="4dp" />
+        tools:layout_editor_absoluteY="4dp"
+        tools:ignore="MissingConstraints"/>
 
     <TextView
         android:id="@+id/textView13"
@@ -118,7 +129,8 @@
         android:textColor="@color/purple_700"
         android:textSize="30dp"
         tools:layout_editor_absoluteX="73dp"
-        tools:layout_editor_absoluteY="118dp" />
+        tools:layout_editor_absoluteY="118dp"
+        tools:ignore="MissingConstraints"/>
 
     <TextView
         android:id="@+id/textView14"
@@ -128,7 +140,8 @@
         android:textColor="@color/black"
         android:textSize="23dp"
         tools:layout_editor_absoluteX="43dp"
-        tools:layout_editor_absoluteY="204dp" />
+        tools:layout_editor_absoluteY="204dp"
+        tools:ignore="MissingConstraints"/>
 
     <TextView
         android:id="@+id/textView15"
@@ -138,7 +151,8 @@
         android:textColor="@color/black"
         android:textSize="23dp"
         tools:layout_editor_absoluteX="38dp"
-        tools:layout_editor_absoluteY="276dp" />
+        tools:layout_editor_absoluteY="276dp"
+        tools:ignore="MissingConstraints"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
