--- a/app/src/main/res/layout/activity_loboratoire_liste.xml
+++ b/app/src/main/res/layout/activity_loboratoire_liste.xml
@@ -19,7 +19,8 @@
         android:textFontWeight="@android:integer/config_longAnimTime"
         android:textSize="30dp"
         tools:layout_editor_absoluteX="101dp"
-        tools:layout_editor_absoluteY="13dp" />
+        tools:layout_editor_absoluteY="13dp"
+        tools:ignore="MissingConstraints" />
 
 
 
@@ -27,9 +28,10 @@
         android:id="@+id/imageView2"
         android:layout_width="109dp"
         android:layout_height="81dp"
-        app:srcCompat="@drawable/LogoApplication"
+        app:srcCompat="@drawable/darkbackground"
         tools:layout_editor_absoluteX="271dp"
-        tools:layout_editor_absoluteY="-2dp" />
+        tools:layout_editor_absoluteY="-2dp"
+        tools:ignore="MissingConstraints" />
 
     <ImageView
         android:id="@+id/imageView3"
@@ -37,12 +39,14 @@
         android:layout_height="74dp"
         app:srcCompat="@drawable/ministeredelsantetunisie"
         tools:layout_editor_absoluteX="-2dp"
-        tools:layout_editor_absoluteY="4dp" />
+        tools:layout_editor_absoluteY="4dp"
+        tools:ignore="MissingConstraints" />
 
     <ListView
         android:id="@+id/lv"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        tools:ignore="MissingConstraints">
     </ListView>
 
 
