--- a/app/src/main/res/layout/activity_testpositive.xml
+++ b/app/src/main/res/layout/activity_testpositive.xml
@@ -14,7 +14,8 @@
         android:textColor="@color/white"
         android:textSize="20dp"
         tools:layout_editor_absoluteX="230dp"
-        tools:layout_editor_absoluteY="479dp" />
+        tools:layout_editor_absoluteY="479dp"
+        tools:ignore="MissingConstraints"/>
 
     <TextView
         android:id="@+id/textView8"
@@ -24,7 +25,8 @@
         android:textColor="@color/white"
         android:textSize="20dp"
         tools:layout_editor_absoluteX="230dp"
-        tools:layout_editor_absoluteY="230dp" />
+        tools:layout_editor_absoluteY="230dp"
+        tools:ignore="MissingConstraints"/>
 
     <TextView
         android:id="@+id/textView9"
@@ -34,7 +36,8 @@
         android:textColor="@color/white"
         android:textSize="20dp"
         tools:layout_editor_absoluteX="230dp"
-        tools:layout_editor_absoluteY="312dp" />
+        tools:layout_editor_absoluteY="312dp"
+        tools:ignore="MissingConstraints"/>
 
     <TextView
         android:id="@+id/textView10"
@@ -44,7 +47,8 @@
         android:textColor="@color/white"
         android:textSize="20dp"
         tools:layout_editor_absoluteX="230dp"
-        tools:layout_editor_absoluteY="406dp" />
+        tools:layout_editor_absoluteY="406dp"
+        tools:ignore="MissingConstraints"/>
 
     <TextView
         android:id="@+id/textView2"
@@ -54,7 +58,8 @@
         android:textColor="@color/white"
         android:textSize="30dp"
         tools:layout_editor_absoluteX="112dp"
-        tools:layout_editor_absoluteY="32dp" />
+        tools:layout_editor_absoluteY="32dp"
+        tools:ignore="MissingConstraints"/>
 
     <TextView
         android:id="@+id/textView3"
@@ -65,7 +70,8 @@
         android:textColor="@color/design_default_color_error"
         android:textSize="25dp"
         tools:layout_editor_absoluteX="156dp"
-        tools:layout_editor_absoluteY="124dp" />
+        tools:layout_editor_absoluteY="124dp"
+        tools:ignore="MissingConstraints"/>
 
     <TextView
         android:id="@+id/textView4"
@@ -75,7 +81,8 @@
         android:textColor="@color/white"
         android:textSize="20dp"
         tools:layout_editor_absoluteX="48dp"
-        tools:layout_editor_absoluteY="228dp" />
+        tools:layout_editor_absoluteY="228dp"
+        tools:ignore="MissingConstraints"/>
 
     <TextView
         android:id="@+id/textView5"
@@ -85,7 +92,8 @@
         android:textColor="@color/white"
         android:textSize="20dp"
         tools:layout_editor_absoluteX="48dp"
-        tools:layout_editor_absoluteY="312dp" />
+        tools:layout_editor_absoluteY="312dp"
+        tools:ignore="MissingConstraints"/>
 
     <TextView
         android:id="@+id/textView6"
@@ -95,7 +103,8 @@
         android:textColor="@color/white"
         android:textSize="20dp"
         tools:layout_editor_absoluteX="48dp"
-        tools:layout_editor_absoluteY="396dp" />
+        tools:layout_editor_absoluteY="396dp"
+        tools:ignore="MissingConstraints"/>
 
     <TextView
         android:id="@+id/textView7"
@@ -105,7 +114,8 @@
         android:textColor="@color/white"
         android:textSize="20dp"
         tools:layout_editor_absoluteX="48dp"
-        tools:layout_editor_absoluteY="479dp" />
+        tools:layout_editor_absoluteY="479dp"
+        tools:ignore="MissingConstraints"/>
 
     <TextView
         android:id="@+id/textView12"
@@ -115,7 +125,8 @@
         android:textColor="@color/white"
         android:textSize="20dp"
         tools:layout_editor_absoluteX="43dp"
-        tools:layout_editor_absoluteY="569dp" />
+        tools:layout_editor_absoluteY="569dp"
+        tools:ignore="MissingConstraints"/>
 
     <Button
         android:id="@+id/button2"
@@ -123,5 +134,6 @@
         android:layout_height="wrap_content"
         android:text="Rechercher"
         tools:layout_editor_absoluteX="139dp"
-        tools:layout_editor_absoluteY="648dp" />
+        tools:layout_editor_absoluteY="648dp"
+        tools:ignore="MissingConstraints"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
