--- a/app/src/main/res/layout/activity_recherche.xml
+++ b/app/src/main/res/layout/activity_recherche.xml
@@ -1,51 +1,95 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    tools:context=".Recherche"
     android:background="@drawable/darkbackground">
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="202dp"
-        android:layout_height="72dp"
-        android:text="@string/app_name"
-        android:textColor="@color/white"
-        android:textSize="30dp"
-        tools:layout_editor_absoluteX="113dp"
-        tools:layout_editor_absoluteY="32dp"
-        tools:ignore="MissingConstraints" />
-
-    <EditText
-        android:id="@+id/ncin"
-        android:layout_width="168dp"
-        android:layout_height="52dp"
-        android:hint="N° Carte d'identité"
-        android:selectAllOnFocus="true"
-        android:textColorHint="@color/white"
-        tools:layout_editor_absoluteX="121dp"
-        tools:layout_editor_absoluteY="349dp"
-        tools:ignore="MissingConstraints" />
-
-    <Button
-        android:id="@+id/button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Rechercher"
-        tools:layout_editor_absoluteX="139dp"
-        tools:layout_editor_absoluteY="467dp"
-        tools:ignore="MissingConstraints"/>
-
     <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="184dp"
-        android:layout_height="201dp"
-        app:srcCompat="@drawable/darkbackground"
-        tools:layout_editor_absoluteX="113dp"
-        tools:layout_editor_absoluteY="123dp"
-        tools:ignore="MissingConstraints"/>
+        android:layout_width="match_parent"
+        android:layout_height="204dp"
+        android:layout_marginTop="70dp"
+        android:layout_marginBottom="30dp"
+        android:paddingTop="0dp"
+        android:src="@drawable/applicationlogo">
+
+    </ImageView>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1" />
+
+        <EditText
+            android:id="@+id/cin"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:background="@color/white"
+            android:layout_weight="4"
+            android:hint="N°Carte d'identité" />
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1" />
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1" />
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1" />
+
+        <Button
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1.2"
+            android:text="Rechercher"
+            android:onClick="Recherche"/>
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1" />
+
+    </LinearLayout>
+
+
+</LinearLayout>
