--- a/app/src/main/res/layout/activity_liste.xml
+++ b/app/src/main/res/layout/activity_liste.xml
@@ -24,12 +24,29 @@
                 android:layout_height="120dp"
                 android:layout_margin="5dp"
                 android:padding="2dp"
-                android:src="@drawable/ministeredelsantetunisie" />
+                android:src="@drawable/applicationlogo" />
 
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1" />
+
+
+              <Button
+                  android:layout_width="wrap_content"
+                  android:layout_height="60dp"
+                  android:layout_weight="1"
+                  android:onClick="ajout"
+                  android:text="Ajouter Patient" />
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:verticalScrollbarPosition="defaultPosition"
+                android:paddingVertical="@android:dimen/app_icon_size" />
+
+
+
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -43,7 +60,7 @@
                     android:layout_marginRight="5dp"
                     android:layout_weight="4"
                     android:padding="0dp"
-                    android:src="@drawable/applicationlogo"/>
+                    android:src="@drawable/ministeredelsantetunisie"/>
 
 
                 <TextView
@@ -51,6 +68,13 @@
                     android:layout_height="0dp"
                     android:layout_weight="2" />
             </LinearLayout>
+
+            <TextView
+                android:id="@+id/textView2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="TextView" />
 
         </LinearLayout>
 
