--- a/app/src/main/res/layout/activity_liste.xml
+++ b/app/src/main/res/layout/activity_liste.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -88,6 +87,7 @@
             <Button
                 android:onClick="to1"
                 android:text="@string/positive_en_cours"
+                android:background="@color/red"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1" />
@@ -96,6 +96,7 @@
                 android:onClick="to2"
                 android:text="@string/positive_retablie"
                 android:layout_width="0dp"
+                android:background="@drawable/buttonbackground"
                 android:layout_height="match_parent"
                 android:layout_weight="1" />
 
@@ -103,6 +104,7 @@
                 android:onClick="to3"
                 android:text="Test Negative"
                 android:layout_width="0dp"
+                android:background="@color/vertfonce"
                 android:layout_height="match_parent"
                 android:layout_weight="1" />
 
