--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,5 +6,8 @@
     <color name="white">#FFFFFF</color>
     <color name="black">#FF000000</color>
     <color name="vert">#7cff88</color>
+    <color name="colorPrimaryLight">#DF3326</color>
+    <color name="red">#EE473B</color>
+    <color name="vertfonce">#2CA331</color>
 
 </resources>
