modification d'interface des liste des patients  fichier : (activity_liste.xml)

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,5 +9,6 @@
     <color name="colorPrimaryLight">#DF3326</color>
     <color name="red">#EE473B</color>
     <color name="vertfonce">#2CA331</color>
+    <color name="gris">#1B0A31</color>
 
 </resources>
