--- a/app/src/main/res/layout/activity_liste.xml
+++ b/app/src/main/res/layout/activity_liste.xml
@@ -31,50 +31,70 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1" />
 
+            <LinearLayout
+                android:layout_width="130dp"
+                android:layout_height="200dp"
+                android:orientation="vertical"
+                android:layout_weight="2">
 
-              <Button
-                  android:layout_width="wrap_content"
-                  android:layout_height="60dp"
-                  android:layout_weight="1"
-                  android:onClick="ajout"
-                  android:text="Ajouter Patient" />
+                <Button
+                    android:id="@+id/add"
+                    android:layout_width="wrap_content"
+                    android:layout_height="1dp"
+                    android:textStyle="bold"
+                    android:textSize="20dp"
+                    android:textColorHint="@color/white"
+                    android:textColor="@color/gris"
+                    android:layout_weight="1"
+                    android:textAlignment="gravity"
+
+                    android:text="@string/listes_des_patients" />
+
+                <Button
+                    android:layout_width="match_parent"
+                    android:layout_height="70dp"
+                    android:onClick="ajout"
+                    android:text="@string/ajouter_patient"
+                    android:textAlignment="center"
+                    android:textSize="18dp"
+                    android:textStyle="italic" />
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
+            </LinearLayout>
+
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:verticalScrollbarPosition="defaultPosition"
-                android:paddingVertical="@android:dimen/app_icon_size" />
-
-
+                android:paddingVertical="@android:dimen/app_icon_size"
+                android:verticalScrollbarPosition="defaultPosition" />
 
 
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="130dp"
                 android:layout_height="match_parent"
                 android:orientation="vertical">
+
                 <ImageView
 
-                    android:layout_width="150dp"
+                    android:layout_width="130dp"
                     android:layout_height="0dp"
                     android:layout_marginLeft="5dp"
                     android:layout_marginRight="5dp"
                     android:layout_weight="4"
                     android:padding="0dp"
-                    android:src="@drawable/ministeredelsantetunisie"/>
+                    android:src="@drawable/ministeredelsantetunisie" />
 
 
                 <TextView
-                    android:layout_width="match_parent"
+                    android:layout_width="0dp"
                     android:layout_height="0dp"
                     android:layout_weight="2" />
             </LinearLayout>
 
-            <TextView
-                android:id="@+id/textView2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="TextView" />
+
+
 
         </LinearLayout>
 
