--- a/app/src/main/res/drawable/buttonbackground2.xml
+++ b/app/src/main/res/drawable/buttonbackground2.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:color="@color/vert"
+    android:color="#6E6E6E"
     tools:targetApi="lollipop">
     <item android:id="@android:id/mask">
         <shape android:shape="rectangle">
-            <solid android:color="@color/vertfonce" />
+            <solid android:color="#A4A4A4" />
 
         </shape>
     </item>
@@ -14,8 +14,8 @@
         <shape android:shape="rectangle">
             <gradient
                 android:angle="90"
-                android:endColor="@color/colorPrimaryLight"
-                android:startColor="@color/vertfonce"
+                android:endColor="#6E6E6E"
+                android:startColor="#A4A4A4"
                 android:type="linear" />
 
         </shape>
